# NCAA_eval

./: .bandit  .buildinfo  .cruft.json  .gitignore  .pre-commit-config.yaml  .windsurfrules  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  STYLE_GUIDE.html  TESTING_STRATEGY.html  evaluation_approaches.md  genindex.html  index.html  mkdocs.yml  noxfile.py  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py  sync.py  user-guide.html
.claude/: settings.json
.doctrees/: STYLE_GUIDE.doctree  TESTING_STRATEGY.doctree  environment.pickle  index.doctree  user-guide.doctree
.doctrees/api/: modules.doctree  ncaa_eval.cli.doctree  ncaa_eval.cli.main.doctree  ncaa_eval.cli.train.doctree  ncaa_eval.doctree  ncaa_eval.evaluation.backtest.doctree  ncaa_eval.evaluation.doctree  ncaa_eval.evaluation.metrics.doctree  ncaa_eval.evaluation.plotting.doctree  ncaa_eval.evaluation.simulation.doctree  ncaa_eval.evaluation.splitter.doctree  ncaa_eval.ingest.connectors.base.doctree  ncaa_eval.ingest.connectors.doctree  ncaa_eval.ingest.connectors.espn.doctree  ncaa_eval.ingest.connectors.kaggle.doctree  ncaa_eval.ingest.doctree  ncaa_eval.ingest.repository.doctree  ncaa_eval.ingest.schema.doctree  ncaa_eval.ingest.sync.doctree  ncaa_eval.model.base.doctree  ncaa_eval.model.doctree  ncaa_eval.model.elo.doctree  ncaa_eval.model.logistic_regression.doctree  ncaa_eval.model.registry.doctree  ncaa_eval.model.tracking.doctree  ncaa_eval.model.xgboost_model.doctree  ncaa_eval.transform.calibration.doctree  ncaa_eval.transform.doctree  ncaa_eval.transform.elo.doctree  ncaa_eval.transform.feature_serving.doctree  ncaa_eval.transform.graph.doctree  ncaa_eval.transform.normalization.doctree  ncaa_eval.transform.opponent.doctree  ncaa_eval.transform.sequential.doctree  ncaa_eval.transform.serving.doctree  ncaa_eval.utils.doctree  ncaa_eval.utils.logger.doctree
.doctrees/testing/: conventions.doctree  domain-testing.doctree  execution.doctree  quality.doctree  test-approach-guide.doctree  test-purpose-guide.doctree  test-scope-guide.doctree
.doctrees/tutorials/: custom-metric.doctree  custom-model.doctree  getting-started.doctree
.github/: pull_request_template.md
.github/workflows/: main-updated.yaml  python-check.yaml
.streamlit/: config.toml
_bmad-output/implementation-artifacts/: 1-1-initialize-repository-package-structure.md  1-2-define-code-quality-standards-style-guide.md  1-3-define-testing-strategy.md  1-4-configure-code-quality-toolchain.md  1-5-configure-testing-framework.md  1-6-configure-session-management-automation.md  1-7-configure-versioning-packaging-documentation.md  1-8-implement-runtime-logging-data-assertions-framework.md  1-9-restructure-docs-sphinx-source.md  2-1-evaluate-data-sources.md  2-2-define-internal-data-schema-repository-layer.md  2-3-implement-data-source-connectors.md  2-4-implement-sync-cli-smart-caching.md  3-1-data-quality-audit.md  3-2-statistical-exploration-relationship-analysis.md  3-3-document-findings-feature-engineering-recommendations.md  4-1-research-feature-engineering-techniques.md  4-2-implement-chronological-data-serving-api.md  4-3-implement-canonical-team-id-mapping-data-cleaning.md  4-4-implement-sequential-transformations.md  4-5-implement-graph-builders-centrality-features.md  4-6-implement-opponent-adjustments.md  (+24 more)
_modules/: index.html
_sources/: index.rst.txt  user-guide.md.txt
api/: modules.html  ncaa_eval.cli.html  ncaa_eval.cli.main.html  ncaa_eval.cli.train.html  ncaa_eval.evaluation.backtest.html  ncaa_eval.evaluation.html  ncaa_eval.evaluation.metrics.html  ncaa_eval.evaluation.plotting.html  ncaa_eval.evaluation.simulation.html  ncaa_eval.evaluation.splitter.html  ncaa_eval.html  ncaa_eval.ingest.connectors.base.html  ncaa_eval.ingest.connectors.espn.html  ncaa_eval.ingest.connectors.html  ncaa_eval.ingest.connectors.kaggle.html  ncaa_eval.ingest.html  ncaa_eval.ingest.repository.html  ncaa_eval.ingest.schema.html  ncaa_eval.ingest.sync.html  ncaa_eval.model.base.html  ncaa_eval.model.elo.html  ncaa_eval.model.html  ncaa_eval.model.logistic_regression.html  ncaa_eval.model.registry.html  ncaa_eval.model.tracking.html  ncaa_eval.model.xgboost_model.html  ncaa_eval.transform.calibration.html  ncaa_eval.transform.elo.html  ncaa_eval.transform.feature_serving.html  ncaa_eval.transform.graph.html  ncaa_eval.transform.html  ncaa_eval.transform.normalization.html  ncaa_eval.transform.opponent.html  ncaa_eval.transform.sequential.html  ncaa_eval.transform.serving.html  ncaa_eval.utils.html  ncaa_eval.utils.logger.html
dashboard/: __init__.py  app.py
docs/: QUALITY_GATES.md  STYLE_GUIDE.md  TESTING_STRATEGY.md  conf.py  index.rst  user-guide.md
scripts/: bmad_pipeline.sh
specs/: 01-brainstorming-session-results.md  02-project-brief.md  04-front-end-spec.md
tasks/: build.py  common.py  env.py  test.py
template/: README.md  cookiecutter.json
template/{{cookiecutter.project_slug}}/: .editorconfig  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  cookie-cutter-improvements.md  noxfile.py  pyproject.toml
template/{{cookiecutter.project_slug}}/.github/: pull_request_template.md
template/{{cookiecutter.project_slug}}/.github/workflows/: main-updated.yaml  python-check.yaml
template/{{cookiecutter.project_slug}}/_bmad/bmm/: config.yaml
template/{{cookiecutter.project_slug}}/docs/: BMAD_UPDATE_GUIDE.md  STYLE_GUIDE.md  TESTING_STRATEGY.md  conf.py  index.rst
template/{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py
template/{{cookiecutter.project_slug}}/tests/: conftest.py
template/{{cookiecutter.project_slug}}/tests/integration/: test_example_integration.py
template/{{cookiecutter.project_slug}}/tests/unit/: test_example_property.py  test_package.py
testing/: conventions.html  domain-testing.html  execution.html  quality.html  test-approach-guide.html  test-purpose-guide.html  test-scope-guide.html
tests/: __init__.py  conftest.py
tutorials/: custom-metric.html  custom-model.html  getting-started.html
(+232 files in other folders)
