[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.project_description }}"
authors = ["{{ cookiecutter.author_name }} <{{ cookiecutter.author_email }}>"]
readme = "README.md"
packages = [{include = "{{ cookiecutter.project_slug }}", from = "src"}]

[tool.poetry.dependencies]
python = ">={{ cookiecutter.python_version_min }},<4.0"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"
hypothesis = "*"
mutmut = "*"
ruff = "*"
mypy = "*"
pre-commit = "*"
nox = "*"
commitizen = "*"
check-manifest = "*"
edgetest = "*"
sphinx = "*"
furo = "*"
myst-parser = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true
files = ["src/{{ cookiecutter.project_slug }}", "tests", "noxfile.py"]
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true

[tool.ruff]
line-length = 110

[tool.ruff.lint]
extend-select = [
    "I",        # Missing required import (auto-fixable)
    "UP",       # Pyupgrade
    "PT",       # flake8-pytest-style rules
    "TID25",    # flake8-tidy-imports rules
    "C90",      # McCabe complexity
    "PLR0911",  # Too many return statements (configured: max-returns = 6)
    "PLR0912",  # Too many branches (configured: max-branches = 12)
    "PLR0913",  # Too many arguments (configured: max-args = 5)
]
ignore = [
    "E501",      # Line too long (handled by formatter)
    "D1",        # Missing docstrings (not yet enforced)
    "D415",      # First line punctuation (not yet enforced)
    "PLR2004",   # Magic value comparison (too aggressive for data science)
]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]
combine-as-imports = true
known-first-party = ["tests"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-args = 5
max-branches = 12
max-returns = 6

[tool.pytest.ini_options]
minversion = "8.0.0"
testpaths = ["tests"]
addopts = "--strict-markers"
norecursedirs = [
    ".*",
    "build",
    "dist",
    "CVS",
    "_darcs",
    "{arch}",
    "*.egg",
    "venv",
    "env",
    "virtualenv",
]
markers = [
    "smoke: Fast smoke tests for pre-commit (< 10 seconds total)",
    "slow: Slow tests excluded from pre-commit (> 5 seconds each)",
    "integration: Integration tests with I/O or external dependencies",
    "property: Hypothesis property-based tests",
    "fuzz: Hypothesis fuzz-based tests for crash resilience",
    "performance: Performance and benchmark tests",
    "regression: Regression tests to prevent bug recurrence",
    "mutation: Tests specifically for mutation testing coverage",
    "no_mutation: Tests incompatible with mutmut runner directory (Path(__file__)-dependent structural tests)",
]

[tool.coverage.run]
branch = true
source = ["src/{{ cookiecutter.project_slug }}"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    'pragma: no cover',
    'def __repr__',
    'if self\.debug',
    'raise AssertionError',
    'raise NotImplementedError',
    'if 0:',
    'if __name__ == .__main__.:',
]
omit = ['env/*', 'venv/*', '*/virtualenv/*', '*/virtualenvs/*', '*/tests/*']

[tool.edgetest]
extras = []

# Add environments to test against latest dependency versions:
# [[tool.edgetest.envs]]
# name = "latest"
# upgrade = ["package1", "package2"]
# command = "pytest tests/ -m smoke --tb=short -q"


[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "$version"
version_files = ["pyproject.toml:version", "docs/conf.py:release"]

[tool.check-manifest]
ignore = [
    # AI and IDE tool directories
    ".claude/**",
    ".windsurf/**",
    # BMAD framework and output
    "_bmad/**",
    "_bmad-output/**",
    # Documentation (non-distribution)
    "docs/**",
    # Planning specifications (non-distribution)
    "specs/**",
    # Task management
    "tasks/**",
    # Config files not in distribution
    "*.yaml",
    "*.yml",
    ".bandit",
    ".cruft.json",
    ".editorconfig",
    # Developer documentation
    "CONTRIBUTING.md",
    "CHANGELOG.md",
    # Nox / test configuration
    "noxfile.py",
    "tests/**",
    # Lock files (not part of distribution)
    "poetry.lock",
]

[tool.mutmut]
paths_to_mutate = ["src/{{ cookiecutter.project_slug }}/"]
pytest_add_cli_args_test_selection = ["tests/", "-m", "not no_mutation"]
